--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
 
     <div class="contact-form">
-        <form action="https://formsubmit.co/YOUR-EMAIL@gmail.com" method="POST">
+        <form action="https://formsubmit.co/altynajtazihan@gmail.com" method="POST">
             <!-- Protect from spam by adding this -->
             <input type="hidden" name="_captcha" value="false">
     
