Update index.html  link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="layer">
                         <h5>Dream High (Ongoing)</h5>
                         <p>Leading the development of a website dedicated to sharing valuable opportunities for youth, such as scholarships, programs, competitions, conferences, and volunteering projects. This project showcases my ability to manage a team, organize content, and create a user-friendly platform.</p>
-                        <a href="https://altynaytazhikhan.github.io/experiment-dream-high/"><i class='bx bx-link-external' style="aliceblue"></i></a>
+                        <a href="https://dreamhigh.info/"><i class='bx bx-link-external' style="aliceblue"></i></a>
                     </div>
                 </div>
             </div>
